[package]
name = "loader-core"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
aarch64-cpu = "*"
cfg-if = "*"
loader-config = { path = "../config" }
loader-payload-types = { path = "../payload/types" }
log = "*"
psci = { version = "*", default-features = false }
sel4-config = { path = "../../sel4/config" }
sel4-logging = { path = "../../runtime/sel4-logging" }
sel4-platform-info = { path = "../../sel4/platform-info" }
spin = "*"
tock-registers = "*"

[build-dependencies]
cc = "*"
glob = "*"
loader-embed-aarch64-translation-tables = { path = "../embed-aarch64-translation-tables" }
quote = "1"
sel4-build-env = { path = "../../sel4/build-env" }
sel4-config = { path = "../../sel4/config" }
sel4-platform-info = { path = "../../sel4/platform-info" }
sel4-rustfmt-helper = { path = "../../sel4/rustfmt-helper" }
