[package]
name = "loader-core"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
aarch64-cpu = "9.0.0"
cfg-if = "1.0.0"
loader-config = { path = "../config" }
loader-types = { path = "../types" }
log = "0.4.17"
psci = { version = "0.1.1", default-features = false }
sel4-config = { path = "../../sel4/config" }
sel4-logging = { path = "../../runtime/sel4-logging" }
sel4-platform-info = { path = "../../sel4/platform-info" }
spin = "0.9.4"
tock-registers = "0.8.1"

[build-dependencies]
cc = "1.0.76"
glob = "0.3.0"
loader-embed-aarch64-translation-tables = { path = "../embed-aarch64-translation-tables" }
quote = "1.0.23"
sel4-build-env = { path = "../../sel4/build-env" }
sel4-config = { path = "../../sel4/config" }
sel4-platform-info = { path = "../../sel4/platform-info" }
sel4-rustfmt-helper = { path = "../../sel4/rustfmt-helper" }
