[package]
name = "loader-payload"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]

[dependencies]
loader-payload-types = { path = "./types" }

[build-dependencies]
proc-macro2 = "1"
quote = "1"
loader-config = { path = "../config" }
loader-payload-at-build-time = { path = "./at-build-time" }
loader-payload-types = { path = "./types" }
sel4-config = { path = "../../sel4/config" }
sel4-platform-info = { path = "../../sel4/platform-info" }
