[package]
name = "loader-payload"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
heapless = { version = "0.7.16", features = ["serde"] }
loader-payload-types = { path = "./types" }

[build-dependencies]
loader-config = { path = "../config" }
loader-payload-at-build-time = { path = "./at-build-time" }
loader-payload-types = { path = "./types" }
proc-macro2 = "1.0.50"
quote = "1.0.23"
sel4-config = { path = "../../sel4/config" }
sel4-platform-info = { path = "../../sel4/platform-info" }
